--- a/Acquire_Clean.ipynb
+++ b/Acquire_Clean.ipynb
@@ -20,7 +20,7 @@
    "id": "330e3a99",
    "metadata": {},
    "source": [
-    "# Load Parquets"
+    "# Load CSVs"
    ]
   },
   {
@@ -771,13 +771,284 @@
    "id": "6cfb1eba",
    "metadata": {},
    "source": [
-    "## Is there the same number of RecipeIds in both dataframes?"
+    "## Is there the same number of RecipeIds in both dataframes?\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0a22124d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recipes: 522517\n",
+      "Reviews: 271678\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of recipes per dataframe\n",
+    "print(f'Recipes: {recipes_df.RecipeId.nunique()}')\n",
+    "print(f'Reviews: {reviews_df.RecipeId.nunique()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bf385836",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recipes Min: 38\n",
+      "Recipes Max: 541383\n",
+      "Reviews Min: 38\n",
+      "Reviews Max: 541298\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Range of unique recipes\n",
+    "print(f'Recipes Min: {recipes_df.RecipeId.min()}')\n",
+    "print(f'Recipes Max: {recipes_df.RecipeId.max()}')\n",
+    "print(f'Reviews Min: {reviews_df.RecipeId.min()}')\n",
+    "print(f'Reviews Max: {reviews_df.RecipeId.max()}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96a1f0b8",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\"> <b>No</b> There are recipes that are not being reviewed. Recipes begin at ID number 38.  </div>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "367bef46",
+   "metadata": {},
+   "source": [
+    "# Prep Recipes DF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ea0f4137",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RecipeId</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>AuthorId</th>\n",
+       "      <th>AuthorName</th>\n",
+       "      <th>CookTime</th>\n",
+       "      <th>PrepTime</th>\n",
+       "      <th>TotalTime</th>\n",
+       "      <th>DatePublished</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Images</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SaturatedFatContent</th>\n",
+       "      <th>CholesterolContent</th>\n",
+       "      <th>SodiumContent</th>\n",
+       "      <th>CarbohydrateContent</th>\n",
+       "      <th>FiberContent</th>\n",
+       "      <th>SugarContent</th>\n",
+       "      <th>ProteinContent</th>\n",
+       "      <th>RecipeServings</th>\n",
+       "      <th>RecipeYield</th>\n",
+       "      <th>RecipeInstructions</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Low-Fat Berry Blue Frozen Dessert</td>\n",
+       "      <td>1533</td>\n",
+       "      <td>Dancer</td>\n",
+       "      <td>PT24H</td>\n",
+       "      <td>PT45M</td>\n",
+       "      <td>PT24H45M</td>\n",
+       "      <td>1999-08-09T21:46:00Z</td>\n",
+       "      <td>Make and share this Low-Fat Berry Blue Frozen ...</td>\n",
+       "      <td>c(\"https://img.sndimg.com/food/image/upload/w_...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>29.8</td>\n",
+       "      <td>37.1</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>30.2</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>c(\"Toss 2 cups berries with sugar.\", \"Let stan...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>39</td>\n",
+       "      <td>Biryani</td>\n",
+       "      <td>1567</td>\n",
+       "      <td>elly9812</td>\n",
+       "      <td>PT25M</td>\n",
+       "      <td>PT4H</td>\n",
+       "      <td>PT4H25M</td>\n",
+       "      <td>1999-08-29T13:12:00Z</td>\n",
+       "      <td>Make and share this Biryani recipe from Food.com.</td>\n",
+       "      <td>c(\"https://img.sndimg.com/food/image/upload/w_...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>16.6</td>\n",
+       "      <td>372.8</td>\n",
+       "      <td>368.4</td>\n",
+       "      <td>84.4</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>20.4</td>\n",
+       "      <td>63.4</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>c(\"Soak saffron in warm milk for 5 minutes and...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   RecipeId                               Name  AuthorId AuthorName CookTime  \\\n",
+       "0        38  Low-Fat Berry Blue Frozen Dessert      1533     Dancer    PT24H   \n",
+       "1        39                            Biryani      1567   elly9812    PT25M   \n",
+       "\n",
+       "  PrepTime TotalTime         DatePublished  \\\n",
+       "0    PT45M  PT24H45M  1999-08-09T21:46:00Z   \n",
+       "1     PT4H   PT4H25M  1999-08-29T13:12:00Z   \n",
+       "\n",
+       "                                         Description  \\\n",
+       "0  Make and share this Low-Fat Berry Blue Frozen ...   \n",
+       "1  Make and share this Biryani recipe from Food.com.   \n",
+       "\n",
+       "                                              Images  ... SaturatedFatContent  \\\n",
+       "0  c(\"https://img.sndimg.com/food/image/upload/w_...  ...                 1.3   \n",
+       "1  c(\"https://img.sndimg.com/food/image/upload/w_...  ...                16.6   \n",
+       "\n",
+       "  CholesterolContent SodiumContent CarbohydrateContent  FiberContent  \\\n",
+       "0                8.0          29.8                37.1           3.6   \n",
+       "1              372.8         368.4                84.4           9.0   \n",
+       "\n",
+       "   SugarContent  ProteinContent  RecipeServings  RecipeYield  \\\n",
+       "0          30.2             3.2             4.0          NaN   \n",
+       "1          20.4            63.4             6.0          NaN   \n",
+       "\n",
+       "                                  RecipeInstructions  \n",
+       "0  c(\"Toss 2 cups berries with sugar.\", \"Let stan...  \n",
+       "1  c(\"Soak saffron in warm milk for 5 minutes and...  \n",
+       "\n",
+       "[2 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recipes_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7b9d2195",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 522517 entries, 0 to 522516\n",
+      "Data columns (total 28 columns):\n",
+      " #   Column                      Non-Null Count   Dtype  \n",
+      "---  ------                      --------------   -----  \n",
+      " 0   RecipeId                    522517 non-null  int64  \n",
+      " 1   Name                        522517 non-null  object \n",
+      " 2   AuthorId                    522517 non-null  int64  \n",
+      " 3   AuthorName                  522517 non-null  object \n",
+      " 4   CookTime                    439972 non-null  object \n",
+      " 5   PrepTime                    522517 non-null  object \n",
+      " 6   TotalTime                   522517 non-null  object \n",
+      " 7   DatePublished               522517 non-null  object \n",
+      " 8   Description                 522512 non-null  object \n",
+      " 9   Images                      522516 non-null  object \n",
+      " 10  RecipeCategory              521766 non-null  object \n",
+      " 11  Keywords                    505280 non-null  object \n",
+      " 12  RecipeIngredientQuantities  522514 non-null  object \n",
+      " 13  RecipeIngredientParts       522517 non-null  object \n",
+      " 14  AggregatedRating            269294 non-null  float64\n",
+      " 15  ReviewCount                 275028 non-null  float64\n",
+      " 16  Calories                    522517 non-null  float64\n",
+      " 17  FatContent                  522517 non-null  float64\n",
+      " 18  SaturatedFatContent         522517 non-null  float64\n",
+      " 19  CholesterolContent          522517 non-null  float64\n",
+      " 20  SodiumContent               522517 non-null  float64\n",
+      " 21  CarbohydrateContent         522517 non-null  float64\n",
+      " 22  FiberContent                522517 non-null  float64\n",
+      " 23  SugarContent                522517 non-null  float64\n",
+      " 24  ProteinContent              522517 non-null  float64\n",
+      " 25  RecipeServings              339606 non-null  float64\n",
+      " 26  RecipeYield                 174446 non-null  object \n",
+      " 27  RecipeInstructions          522517 non-null  object \n",
+      "dtypes: float64(12), int64(2), object(14)\n",
+      "memory usage: 111.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "recipes_df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c51b2a0",
+   "metadata": {},
+   "source": [
+    "**Change object dtypes to float/int.**"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a22124d",
+   "id": "bb02eff5",
    "metadata": {},
    "outputs": [],
    "source": []
